--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <title>GIF-Tastic | Willie Edwards</title>
+    <title>gifTastic | Willie Edwards</title>
 </head>
 
 <body>
@@ -46,21 +46,22 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>GIF-Tastic</h1>
+                    <h1>gifTastic</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="jumbotron">
-                        <div id="cartoon-buttons"></div>
+                        <h2 id="title">Magical GIF Maker</h2>
                         <div class="container" id="btn">
                             <form id="cartoon-form">
-                                <label id="add" for="cartoon-input">Enter your favorite cartoon:</label>
+                                <label id="add" for="cartoon-input">Submit a topic of your choice:</label>
                                 <input type="text" class="form-control" id="cartoon-input">
                             </form>
                             <button onclick="submitButtonClicked()" type="button" id="add-cartoon"
-                                class="btn btn-success">Submit</button>
+                            class="btn btn-success">Submit</button>
                         </div>
+                        <div id="cartoon-buttons"></div>
                     </div>
                 </div>
             </div>
@@ -70,7 +71,7 @@
                 </div>
             </div>
         </div>
-        
+
         <footer class="bg-dark">
             <div>
                 Copyright &copy;
