--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <div class="row">
                 <div class="col">
                     <div class="jumbotron">
-                        <h2 id="title">Magical GIF Maker</h2>
+                        <h2 id="title">Cartoons! Cartoons!</h2>
                         <div class="container" id="btn">
                             <form id="cartoon-form">
-                                <label id="add" for="cartoon-input">Submit a topic of your choice:</label>
+                                <label id="add" for="cartoon-input">Submit a cartoon of your choice:</label>
                                 <input type="text" class="form-control" id="cartoon-input">
                             </form>
                             <button onclick="submitButtonClicked()" type="button" id="add-cartoon"
