--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <h1 class="text-center">BIKINI BOTTOM GIF-O-MATIC</h1>
+        <h1 class="text-center">BiKiNi BOTTOM GiF-O-MATiC</h1>
     </header>
     <br>
     <br>
