added numbers to directions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container" style="background: transparent;">
         <div class="container text-center" id="btn" style="background: transparent;">
             <form id="character-form">
-                <label id="add" for="character-input">Enter your favorite SpongeBob character to create a button:</label>
+                <label id="add" for="character-input">1. Enter your favorite SpongeBob character to create a button:</label>
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
@@ -44,9 +44,9 @@
             <br>
             <br>
             
-            <div id="character-buttons"><p>Click a button to display GIF images!</p></div>
+            <div id="character-buttons"><p>2. Click a button to display GIF images!</p></div>
             <br>
-            <p>Click an image to start and stop animation!</p>
+            <p>3. Click an image to start and stop animation!</p>
             <div id="characters"> </div>
         </div>
     </div>
