added links to portfolio and github repo

--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
 
 <body>
     <header>
-        <h1 class="text-center">BiKiNi BOTTOM GiF-O-MATiC</h1>
+        <div class="container">
+            <p class="links"> <a class="links" href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
+                    class="links" href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
+        </div>
     </header>
+    <h1 class="text-center">BiKiNi BOTTOM GiF-O-MATiC</h1>
     <br>
     <br>
     <div class="container" style="background: transparent;">
         <div class="container text-center" id="btn" style="background: transparent;">
             <form id="character-form">
-                <label id="add" for="character-input">1. Enter your favorite SpongeBob character to create a button:</label>
+                <label id="add" for="character-input">1. Enter your favorite SpongeBob character to create a
+                    button:</label>
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
@@ -43,8 +48,10 @@
                 class="btn btn-success">Submit</button>
             <br>
             <br>
-            
-            <div id="character-buttons"><p>2. Click a button to display GIF images!</p></div>
+
+            <div id="character-buttons">
+                <p>2. Click a button to display GIF images!</p>
+            </div>
             <br>
             <p>3. Click an image to start and stop animation!</p>
             <div id="characters"> </div>
