fixed portfolio/repo link alignment

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <header>
         <div class="container">
-            <p class="links"> <a class="links" href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
-                    class="links" href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
+            <p class="links"> <a href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
+                    href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
         </div>
     </header>
     <h1 class="text-center">BiKiNi BOTTOM GiF-O-MATiC</h1>
