--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <br>
 
             <div id="character-buttons">
-                <p>2. Click a button to display GIF images!</p>
+                <p>2. Click a button of your choice to display GIF images.</p>
             </div>
             <br>
-            <p>3. Click an image to start and stop animation!</p>
+            <p>3. Click an image to start and stop GIF animation!</p>
             <div id="characters"> </div>
         </div>
     </div>
