updated header and h1

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 </head>
 
 <body>
+
     <header>
-        <div class="container">
             <p class="links"> <a href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
                     href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
-        </div>
     </header>
-    <h1 class="text-center">BiKiNi BOTTOM GiF-O-MATiC</h1>
+
+    <h1 class="text-center">BiKiNi BOTTOM<br>GiF-O-MATiC</h1>
+    
     <br>
-    <br>
+
     <div class="container" style="background: transparent;">
         <div class="container text-center" id="btn" style="background: transparent;">
             <form id="character-form">
@@ -46,16 +47,21 @@
             </form>
             <button onclick="submitButtonClicked()" type="button" id="add-character"
                 class="btn btn-success">Submit</button>
+
             <br>
             <br>
 
             <div id="character-buttons">
                 <p>2. Click a button of your choice to display GIF images.</p>
             </div>
+
             <br>
+
             <p>3. Click an image to start and stop GIF animation!</p>
             <div id="characters"> </div>
+
         </div>
+        
     </div>
 
     <!-- Optional JavaScript -->
