updated portfolio link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header>
             <p class="links"> <a href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
-                    href="https://willieedwards.github.io/portfolio/">Portfolio</a></p>
+                    href="https://willieedwards.github.io/portfolio/#portfolio">Portfolio</a></p>
     </header>
 
     <h1 class="text-center">BiKiNi BOTTOM<br>GiF-O-MATiC</h1>
